fix(react-video-demo): push participant list scrollbar to the edge of the container

--- a/sample-apps/react/react-video-demo/src/components/Panel/Panel.module.css
+++ b/sample-apps/react/react-video-demo/src/components/Panel/Panel.module.css
@@ -116,3 +116,7 @@
   display: none;
   transition: opacity 200ms;
 }
+
+.participantsPanel {
+  padding-inline: 0;
+}
